fix: незакомиченные файлы

--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.json
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ReadonlyConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;",
+    "DefaultConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;"
+  },
+  "SecretKey": "negrloxinegrloxinegrloxinegrloxi"
 }
