--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/Properties/launchSettings.json
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "OnlineChatV2.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:8001",
       "environmentVariables": {
