--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.Development.json
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "ReadonlyConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;",
+    "DefaultConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;"
+  },
+  "SecretKey": "negrloxinegrloxinegrloxinegrloxi"
 }
