feat: сохранение сообщений, сервис контактов, апишка контактов

--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.Development.json
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.Development.json
@@ -5,9 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReadonlyConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;",
-    "DefaultConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;"
+    "ReadonlyConnectionString": "Host=26.247.222.21;Port=5432;Database=ChatDb;Username=chat;Password=12345678;",
+    "DefaultConnectionString": "Host=26.247.222.21;Port=5432;Database=ChatDb;Username=chat;Password=12345678;"
   },
   "SecretKey": "negrloxinegrloxinegrloxinegrloxi"
 }
