--- a/OnlineChatV2.Api/OnlineChatV2.Dal/OnlineChatV2.Dal.csproj
+++ b/OnlineChatV2.Api/OnlineChatV2.Dal/OnlineChatV2.Dal.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\OnlineChatV2.Domain\OnlineChatV2.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
