--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.json
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ReadonlyConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;",
-    "DefaultConnectionString": "Host=localhost;Port=5432;Database=ChatDb;Username=chat;Password=12345678;"
+    "ReadonlyConnectionString": "Host=26.247.222.21;Port=5432;Database=ChatDb;Username=chat;Password=12345678;",
+    "DefaultConnectionString": "Host=26.247.222.21;Port=5432;Database=ChatDb;Username=chat;Password=12345678;"
   },
   "SecretKey": "negrloxinegrloxinegrloxinegrloxi"
 }
