--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/OnlineChatV2.WebApi.csproj
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/OnlineChatV2.WebApi.csproj
@@ -33,4 +33,8 @@
       <ProjectReference Include="..\OnlineChatV2.Domain\OnlineChatV2.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\" />
+    </ItemGroup>
+
 </Project>
