--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@aspnet/signalr": "^1.0.27",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@microsoft/signalr": "^7.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "twemoji": "^13.1.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
