--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/OnlineChatV2.WebApi.csproj
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/OnlineChatV2.WebApi.csproj
@@ -34,7 +34,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="wwwroot\" />
+      <Folder Include="wwwroot\chatAvatars\" />
+      <Folder Include="wwwroot\userAvatars\" />
     </ItemGroup>
 
 </Project>
