--- a/OnlineChatV2.Api/OnlineChatV2.WebApi/mediaextensions.json
+++ b/OnlineChatV2.Api/OnlineChatV2.WebApi/mediaextensions.json
@@ -2,6 +2,7 @@
     "Extensions": {
       "Picture": ["jpg", "jpeg", "png", "bmp", "svg", "webp"],
       "Video": ["mp4", "mov", "avi", "mkv", "wmv", "flv", "webm", "3gp"],
-      "Gif": ["gif"] 
+      "Gif": ["gif"],
+      "Audio": ["mp3", "wav", "ogg", "aac", "m4a"]
   }
 }
